# gcp-jfrog

./: LICENSE.txt  README.md  divide_by_three.py  pyproject.toml  setup.cfg  setup.py
basicpkg/tests/: test_multiply_by_three.py
