[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basicpkg"
version = "1.0.0"
authors = [
  { name="siva kumar", email="karrouthusivakumar@gmail.com" },
]
description = "An example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shivakumar27342/gcp-jfrog"
"Bug Tracker" = "https://github.com/shivakumar27342/gcp-jfrog/issues"

